test/LitTests/SemanticAnalysis/LifetimeMethods/InvalidStaticnessSetDead.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass() {
	// CHECK: .loci:6:2: error: lifetime method '::TestClass::__setdead' should not be static
	static void __setdead() noexcept { }
}

// CHECK: 1 error generated.
